assert with a proper check in StudentController Spring Security's CSRF protection issue message fixed Code test coverage 30%
CORS Configuration Properties
✅ Principle of least privilege (minimal origins/headers)
✅ Environment-specific configuration support
✅ Clear security documentation
✅ No wildcard patterns with credentials
✅ Explicit method and header restrictions

0% Security Hotspots